--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,51 @@
 {
   "name": "clearsale2/integration",
-  "description": "End-to-end Fraud management solution, helping e-commerce merchants protect their business by carefully sorting through orders to give the most accurate determination of Fraud risk, and then handling each transaction as necessary.",
-  "require": {
-    "php": ">=7.3.0"
-  },
+  "license": "GPL-3.0-only",
+  "version": "3.0.3",
   "type": "magento2-module",
-  "version": "3.0.2",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
-  "authors": [
+  "description": "End-to-end Fraud management solution, helping e-commerce merchants protect their business by carefully sorting through orders to give the most accurate determination of Fraud risk, and then handling each transaction as necessary.",
+  "repositories": [
     {
-      "name": "Eric Lemes",
-      "email": "ericflemes@gmail.com"
+      "type": "composer",
+      "url": "https://repo.magento.com/"
     }
   ],
-  "minimum-stability": "dev-master",
+  "require": {
+    "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
+    "paypal/rest-api-sdk-php" : "^1.13.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.1.0",
+    "squizlabs/php_codesniffer": "2.7.0",
+    "phpmd/phpmd": "@stable",
+    "pdepend/pdepend": "2.2.2",
+    "sjparkinson/static-review": "~4.1",
+    "fabpot/php-cs-fixer": "~1.2",
+    "lusitanian/oauth": "~0.3 <=0.7.0",
+    "phpunit/phpunit-selenium": ">=1.2",
+    "sebastian/phpcpd": "^2.0",
+    "satooshi/php-coveralls": "^1.0",
+    "phpdocumentor/phpdocumentor": "^2.8",
+    "magento-ecg/coding-standard":"dev-master",
+    "rregeer/phpunit-coverage-check": "^0.1.3"
+  },
+  "authors":[
+    {
+      "name":"Eric Lemes",
+      "email":"eric.lemes@clear.sale"
+    }
+  ],
+  "minimum-stability": "dev",
+  "scripts": {
+    "test": "phpunit"
+  },
   "autoload": {
     "files": [ "registration.php" ],
     "psr-4": {
       "Clearsale\\Integration\\": ""
     }
+  },
+  "config":{
+    "secure-http":false
   }
 }
