--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     }
   ],
   "require": {
-    "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
-    "paypal/rest-api-sdk-php" : "^1.13.0"
+    "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1.0",
